<resources>
    <string name="app_name">辽宁12选5工具</string>
    <string name="loadData">加载数据</string>
    <string name="analysisSel2">任二分析</string>
    <string name="analysisSel3">任三分析</string>
    <string name="analysisSel4">任四分析</string>
    <string name="analysisSel5">任五分析</string>
    <string name="title_activity_ren2_main">Ren2MainActivity</string>
    <string name="action_settings">Settings</string>
</resources>
