<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.baiylin.songjia.ln5in12tool.MainActivity">
<!--  android:background="@android:drawable/alert_dark_frame" -->


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/loadData"
        android:id="@+id/loadData"
        android:layout_marginTop="59dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/bright_foreground_disabled_material_dark" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/analysisSel2"
        android:id="@+id/analysisSel2"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/loadData"
        android:layout_alignStart="@+id/loadData"
        android:layout_marginBottom="124dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/analysisSel3"
        android:id="@+id/analysisSel3"
        android:layout_above="@+id/analysisSel2"
        android:layout_alignLeft="@+id/loadData" />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/analysisSel4"
        android:id="@+id/analysisSel4"
        android:layout_above="@+id/analysisSel3"
        android:layout_alignLeft="@+id/loadData" />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/analysisSel5"
        android:id="@+id/analysisSel5"
        android:layout_above="@+id/analysisSel4"
        android:layout_alignLeft="@+id/loadData" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/analysisSel5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/analysisSel5"
            android:layout_alignLeft="@+id/loadData" />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/analysisSel5"
            android:layout_alignLeft="@+id/loadData" />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/loadData" />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/loadData" />
    </TableLayout>

</RelativeLayout>
